[package]
name = 'jupiter-runtime'
version = '1.0.0'
authors = ["Patract <https://github.com/patractlabs>"]
edition = '2018'

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
log = { version = "0.4.14", default-features = false }
smallvec = "1.6.1"
hex-literal = { version = '0.3.1', optional = true }
getrandom = { version = "0.2", features = ["js"] }

# Substrate dependencies
sp-std = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
sp-io = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
sp-version = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
sp-session = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
sp-offchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
sp-block-builder = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
sp-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
sp-inherents = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
sp-consensus-aura = { version = "0.9.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
max-encoded-len = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }

frame-support = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
frame-executive = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
frame-system = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
frame-system-rpc-runtime-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
pallet-assets = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
pallet-aura = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
pallet-authorship = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
pallet-balances = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
pallet-multisig = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
pallet-proxy = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
pallet-randomness-collective-flip = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
pallet-session = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
pallet-sudo = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
pallet-timestamp = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
pallet-transaction-payment = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
pallet-utility = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }

# Cumulus dependencies
cumulus-pallet-aura-ext = { git = "https://github.com/patractlabs/cumulus", branch = "patract-sandbox-xcmp", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/patractlabs/cumulus", branch = "patract-sandbox-xcmp", default-features = false }
cumulus-primitives-core = { git = "https://github.com/patractlabs/cumulus", branch = "patract-sandbox-xcmp", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/patractlabs/cumulus", branch = "patract-sandbox-xcmp", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/patractlabs/cumulus", branch = "patract-sandbox-xcmp", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/patractlabs/cumulus", branch = "patract-sandbox-xcmp", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/patractlabs/cumulus", branch = "patract-sandbox-xcmp", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/patractlabs/cumulus", branch = "patract-sandbox-xcmp", default-features = false }
cumulus-ping = { git = "https://github.com/patractlabs/cumulus", branch = "patract-sandbox-xcmp", default-features = false }
pallet-collator-selection = { git = "https://github.com/patractlabs/cumulus", branch = "patract-sandbox-xcmp", default-features = false }
parachain-info = { git = "https://github.com/patractlabs/cumulus", branch = "patract-sandbox-xcmp", default-features = false }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/patractlabs/polkadot", branch = "patract-sandbox-xcmp", default-features = false }
xcm = { git = "https://github.com/patractlabs/polkadot", branch = "patract-sandbox-xcmp", default-features = false }
xcm-builder = { git = "https://github.com/patractlabs/polkadot", branch = "patract-sandbox-xcmp", default-features = false }
xcm-executor = { git = "https://github.com/patractlabs/polkadot", branch = "patract-sandbox-xcmp", default-features = false }
pallet-xcm = { git = "https://github.com/patractlabs/polkadot", branch = "patract-sandbox-xcmp", default-features = false }

# contracts
pallet-contracts = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
pallet-contracts-primitives = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
pallet-contracts-rpc-runtime-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }

jupiter-primitives = { path = "../../primitives", default-features = false }
jupiter-runtime-common = { path = "../common", default-features = false }
jupiter-chain-extension = { path = "../../primitives/chain-extension", default-features = false }
randomness_collect = { path = "../../pallets/randomness_collect", default-features = false }
currency = { path = "../../pallets/currency", default-features = false }
currencies = { path = "../../pallets/currencies", default-features = false }
module-transaction-payment = { path = "../../pallets/transaction-payment", default-features = false }

# orml xcmp
# ORML Dependencies
orml-currencies = { git = 'https://github.com/patractlabs/open-runtime-module-library', branch = 'patract-sandbox-xcmp', default-features = false }
orml-unknown-tokens = { git = 'https://github.com/patractlabs/open-runtime-module-library', branch = 'patract-sandbox-xcmp', default-features = false }
orml-tokens = { git = 'https://github.com/patractlabs/open-runtime-module-library', branch = 'patract-sandbox-xcmp', default-features = false }
orml-xtokens = { git = 'https://github.com/patractlabs/open-runtime-module-library', branch = 'patract-sandbox-xcmp', default-features = false }
orml-xcm-support = { git = 'https://github.com/patractlabs/open-runtime-module-library', branch = 'patract-sandbox-xcmp', default-features = false }
orml-xcm = { git = 'https://github.com/patractlabs/open-runtime-module-library', branch = 'patract-sandbox-xcmp', default-features = false }
orml-traits = { git = 'https://github.com/patractlabs/open-runtime-module-library', branch = 'patract-sandbox-xcmp', default-features = false }

[dev-dependencies]
hex-literal = "0.3.1"
hex = "0.4.3"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }

[features]
default = [ "std" ]
std = [
    "codec/std",
    "serde",
    "log/std",
    "sp-api/std",
    "sp-std/std",
    "sp-io/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-version/std",
    "sp-offchain/std",
    "sp-session/std",
    "sp-block-builder/std",
    "sp-transaction-pool/std",
    "sp-inherents/std",
    "frame-support/std",
    "frame-executive/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "max-encoded-len/std",
    "pallet-assets/std",
    "pallet-authorship/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-multisig/std",
    "pallet-proxy/std",
    "pallet-randomness-collective-flip/std",
    "pallet-session/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-utility/std",
    "parachain-info/std",
    "cumulus-pallet-aura-ext/std",
    "pallet-collator-selection/std",
    "cumulus-pallet-dmp-queue/std",
    "cumulus-pallet-parachain-system/std",
    "cumulus-pallet-xcmp-queue/std",
    "cumulus-pallet-xcm/std",
    "cumulus-primitives-core/std",
    "cumulus-primitives-timestamp/std",
    "cumulus-primitives-utility/std",
    "cumulus-ping/std",
    "xcm/std",
    "xcm-builder/std",
    "xcm-executor/std",
    "sp-consensus-aura/std",
    "pallet-contracts/std",
    "pallet-contracts-primitives/std",
    "pallet-contracts-rpc-runtime-api/std",

    "jupiter-primitives/std",
    "jupiter-runtime-common/std",
    "jupiter-chain-extension/std",
    "randomness_collect/std",
    "getrandom/std",

    "orml-currencies/std",
    "orml-unknown-tokens/std",
    "orml-tokens/std",
    "orml-xtokens/std",
    "orml-xcm-support/std",
    "orml-traits/std",
    "currency/std",
    "currencies/std",
    "module-transaction-payment/std",
]
